--- a/src/app/shared/components/stepper/stepper.component.scss
+++ b/src/app/shared/components/stepper/stepper.component.scss
@@ -21,7 +21,7 @@
   .line {
     width: 100%;
     height: 2px;
-    background: $stepperLine;
+    background: var(--medium-gray, #{$medium-gray});
     flex: 1;
   }
 }
