--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -11,7 +11,7 @@
 .input-group button {
   background-color: white;
   border-radius: 0 .5rem .5rem 0;
-  border-color: $primary-background-color !important;
+  border-color: var(--primary-background-color, #{$primary-background-color}) !important;
 
   &:focus {
     border-color: var(--s-h-blue, #{$s-h-blue}) !important;
