refactor: rename `s-h-blue` -> `focus-border`

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -7,7 +7,7 @@ $colors: (
   light-gray: $light-gray,
   medium-gray: $medium-gray,
   dark-gray: $dark-gray,
-  s-h-blue: $primary,
+  focus-border: $primary,
   s-h-blue-50: $s-h-blue-50,
   s-h-blue-15: $s-h-blue-15,
   s-h-light-blue: $s-h-light-blue,
