--- a/src/default.scss
+++ b/src/default.scss
@@ -4,7 +4,7 @@ $secondary: #b3003e;
 $light-gray: #F5F6F7;
 $medium-gray: #909498;
 $dark-gray: #595959;
-$s-h-blue: $primary;
+$focus-border: $primary;
 $s-h-blue-50: #8497af;
 $s-h-blue-15: #d9dfe7;
 $s-h-light-blue: #c9daef;
