--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -14,7 +14,7 @@
   border-color: var(--primary-background-color, #{$primary-background-color}) !important;
 
   &:focus {
-    border-color: var(--s-h-blue, #{$s-h-blue}) !important;
+    border-color: var(--focus-border, #{$focus-border}) !important;
   }
 }
 
