refactor: rename `s-h-blue-15` -> `toolbar-background-color`

--- a/src/app/poll/mobile-poll-table.component.scss
+++ b/src/app/poll/mobile-poll-table.component.scss
@@ -38,7 +38,7 @@ select {
 }
 
 .toolbar {
-  background-color: var(--s-h-blue-15, #{$s-h-blue-15}) ;
+  background-color: var(--toolbar-background-color, #{$toolbar-background-color}) ;
   min-height: 50px;
 }
 
