--- a/src/default.scss
+++ b/src/default.scss
@@ -6,7 +6,6 @@ $medium-gray: #909498;
 $dark-gray: #595959;
 $focus-border: $primary;
 $s-h-blue-50: #8497af;
-$s-h-blue-15: #d9dfe7;
 $s-h-light-blue: #c9daef;
 $input-focus-border-color: $primary;
 $danger: $secondary;
@@ -26,7 +25,7 @@ $poll-row-border-color: #d9d9d9;
 $circle-tag-border-color: $poll-row-border-color;
 $theme-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
 $primary-background-color: $s-h-light-blue;
-$toolbar-background-color: $s-h-blue-15;
+$toolbar-background-color: #d9dfe7;
 $form-icon-width: 1.8rem;
 $form-icon-height: 1.8rem;
 $form-status-icon-width: 30px;
