--- a/src/default.scss
+++ b/src/default.scss
@@ -5,7 +5,6 @@ $light-gray: #F5F6F7;
 $medium-gray: #909498;
 $dark-gray: #595959;
 $focus-border: $primary;
-$s-h-light-blue: #c9daef;
 $input-focus-border-color: $primary;
 $danger: $secondary;
 $btn-text: #ffffff;
@@ -23,7 +22,7 @@ $poll-data-cell-border-left-right-color: #d9d9d9;
 $poll-row-border-color: #d9d9d9;
 $circle-tag-border-color: $poll-row-border-color;
 $theme-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25), 0 2px 5px 0 rgba(0, 0, 0, 0.18);
-$primary-background-color: $s-h-light-blue;
+$primary-background-color: #c9daef;
 $toolbar-background-color: #d9dfe7;
 $form-icon-width: 1.8rem;
 $form-icon-height: 1.8rem;
