fix: trash icon not centered

--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -177,7 +177,7 @@
                         </div>
                       </div>
                     </th>
-                    <td class="h-100">
+                    <td class="td-full-height">
                         <!-- button to remove the form elements (so the participant won't be added) -->
                         <div class="d-flex h-100 align-items-center justify-content-center">
                           <button
@@ -302,7 +302,7 @@
                           </div>
                         </div>
                       </td>
-                      <td class="h-100">
+                      <td class="td-full-height">
                           <!-- button to delete the currently edited participant -->
                           <div class="d-flex h-100 align-items-center justify-content-center">
                             <button
