fix: declare colors only in `default.scss`

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -2,7 +2,7 @@
 
 $colors: (
   primary: $primary,
-  primary-lighter-10: #004691,
+  primary-lighter-10: $primary-lighter-10,
   secondary: $secondary,
   light-gray: $light-gray,
   medium-gray: $medium-gray,
