--- a/src/default.scss
+++ b/src/default.scss
@@ -1,5 +1,6 @@
 $derivate: 'default';
 $primary: #003064;
+$primary-lighter-10: #004691;
 $secondary: #b3003e;
 $light-gray: #F5F6F7;
 $medium-gray: #909498;
