--- a/src/app/shared/components/tos/tos.component.html
+++ b/src/app/shared/components/tos/tos.component.html
@@ -17,7 +17,7 @@
 
     @if (isTosRead.dirty && isTosRead.invalid) {
       <div class="col-12 invalid-message" id="tos-accept" role="alert" aria-atomic="false">
-        <i class="fa fa-exclamation-triangle" aria-hidden="true"></i>
+        <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
         {{ 'tos.accept' | translate }}
       </div>
     }
