refactor: remove `aria-hidden` attribute
`fontawesome` SVGs contain this attribute by default.

--- a/src/app/create-appointment/create-appointment.component.html
+++ b/src/app/create-appointment/create-appointment.component.html
@@ -49,7 +49,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.title.noTitle' | translate }}
                 </div>
               }
@@ -61,7 +61,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.title.invalid' | translate }}
                 </div>
               }
@@ -73,7 +73,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.title.tooLong' | translate }}
                 </div>
               }
@@ -106,7 +106,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.name.noName' | translate }}
                 </div>
               }
@@ -118,7 +118,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.name.invalid' | translate }}
                 </div>
               }
@@ -130,7 +130,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.name.tooLong' | translate }}
                 </div>
               }
@@ -161,7 +161,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.place.invalid' | translate }}
                 </div>
               }
@@ -173,7 +173,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.place.tooLong' | translate }}
                 </div>
               }
@@ -210,7 +210,7 @@
                   role="alert"
                   aria-atomic="false"
                 >
-                  <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                  <i class="fa-solid fa-triangle-exclamation"></i>
                   {{ 'poll.details.description.tooLong' | translate }}
                 </div>
               }
