--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -35,7 +35,7 @@
                 (click)="togglePasswordVisibility()"
                 [attr.aria-description]="'password.' + (passwordHidden ? 'showPassword' : 'hidePassword') | translate"
               >
-                <i class="fa-solid" aria-hidden="true" [ngClass]="passwordHidden ? 'fa-eye-slash' : 'fa-eye'"></i>
+                <i class="fa-solid" [ngClass]="passwordHidden ? 'fa-eye-slash' : 'fa-eye'"></i>
               </button>
             </div>
             @if (showIsInvalid && isInvalid) {
@@ -46,7 +46,7 @@
                 role="alert"
                 aria-atomic="false"
               >
-                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                <i class="fa-solid fa-triangle-exclamation"></i>
                 {{ 'password.invalid' | translate }}
               </div>
             }
