--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,7 @@
                 role="alert"
                 aria-atomic="false"
               >
-                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                <i class="fa-solid fa-triangle-exclamation"></i>
                 {{ 'poll.title.noTitle' | translate }}
               </div>
             }
@@ -57,7 +57,7 @@
                 role="alert"
                 aria-atomic="false"
               >
-                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                <i class="fa-solid fa-triangle-exclamation"></i>
                 {{ 'poll.title.invalid' | translate }}
               </div>
             }
@@ -69,7 +69,7 @@
                 role="alert"
                 aria-atomic="false"
               >
-                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                <i class="fa-solid fa-triangle-exclamation"></i>
                 {{ 'poll.title.tooLong' | translate }}
               </div>
             }
