--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -146,7 +146,7 @@
                               role="alert"
                               aria-atomic="false"
                             >
-                              <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                              <i class="fa-solid fa-triangle-exclamation"></i>
                               {{ 'poll.details.name.noName' | translate }}
                             </div>
                           }
@@ -158,7 +158,7 @@
                               role="alert"
                               aria-atomic="false"
                             >
-                              <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                              <i class="fa-solid fa-triangle-exclamation"></i>
                               {{ 'poll.details.name.invalid' | translate }}
                             </div>
                           }
@@ -170,7 +170,7 @@
                               role="alert"
                               aria-atomic="false"
                             >
-                              <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                              <i class="fa-solid fa-triangle-exclamation"></i>
                               {{ 'poll.details.name.tooLong' | translate }}
                             </div>
                           }
@@ -283,19 +283,19 @@
                             && (formHelper.getParticipantFormName().dirty || formHelper.getParticipantFormName().touched)
                             && !!formHelper.getParticipantFormName().errors?.required) {
                               <div class="invalid-message" id="no-name-edit" role="alert" aria-atomic="false">
-                                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                                <i class="fa-solid fa-triangle-exclamation"></i>
                                 {{ 'poll.details.name.noName' | translate }}
                               </div>
                             }
                             @if (formHelper.getParticipantFormName() && !!formHelper.getParticipantFormName().errors?.invalidName) {
                               <div class="invalid-message" id="invalid-edit-name" role="alert" aria-atomic="false">
-                                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                                <i class="fa-solid fa-triangle-exclamation"></i>
                                 {{ 'poll.details.name.invalid' | translate }}
                               </div>
                             }
                             @if (formHelper.getParticipantFormName() && !!formHelper.getParticipantFormName().errors?.maxlength) {
                               <div class="invalid-message" id="too-long-edit" role="alert" aria-atomic="false">
-                                <i class="fa-solid fa-triangle-exclamation" aria-hidden="true"></i>
+                                <i class="fa-solid fa-triangle-exclamation"></i>
                                 {{ 'poll.details.name.tooLong' | translate }}
                               </div>
                             }
